# ecommerce

./: .gitignore  BUILD.bazel  README.rst  WORKSPACE  deps.bzl  go.mod  go.sum
catalogue/: BUILD.bazel  mapper.go  store.go
catalogue/api/v1/: BUILD.bazel  service.go
catalogue/cmd/serve/: BUILD.bazel  main.go
catalogue/deploy/: deployment.yaml  service.yaml
catalogue/proto/v1/: BUILD.bazel  catalogue.proto
customers/: BUILD.bazel  mapper.go  mapper_test.go  store.go
customers/api/v1/: BUILD.bazel  service.go
customers/cmd/serve/: BUILD.bazel  main.go
customers/deploy/: deployment.yaml  service.yaml
customers/proto/v1/: BUILD.bazel  customers.proto
data/: seed.sql
database/deploy/: deployment.yaml  service.yaml
database/migrations/: 000001_init.up.sql
migrations/: 000001_init.down.sql  000001_init.up.sql
scripts/: run.sh
transactions/: BUILD.bazel  mapper.go  store.go
transactions/api/v1/: BUILD.bazel  service.go
transactions/cmd/serve/: BUILD.bazel  main.go
transactions/deploy/: deployment.yaml  service.yaml
transactions/proto/v1/: BUILD.bazel  transactions.proto
transactions/workflow/: BUILD.bazel  activity.go  workflow.go
