load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "catalogue",
    srcs = [
        "mapper.go",
        "store.go",
    ],
    importpath = "github.com/mohsin-ul-islam/ecommerce/catalogue",
    visibility = ["//visibility:public"],
    deps = [
        "//catalogue/proto/v1:proto",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)
