load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "customers",
    srcs = [
        "mapper.go",
        "store.go",
    ],
    importpath = "github.com/mohsin-ul-islam/ecommerce/customers",
    visibility = ["//visibility:public"],
    deps = [
        "//customers/proto/v1:proto",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_test(
    name = "customers_test",
    srcs = ["mapper_test.go"],
    embed = [":customers"],
    deps = ["@com_github_stretchr_testify//assert"],
)
