load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "workflow",
    srcs = [
        "activity.go",
        "workflow.go",
    ],
    importpath = "github.com/mohsin-ul-islam/ecommerce/transactions/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//transactions",
        "//transactions/proto/v1:proto",
        "@com_github_jackc_pgx_v5//:pgx",
        "@io_temporal_go_sdk//workflow",
    ],
)
