load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "customers_proto",
    srcs = ["customers.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "customers_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mohsin-ul-islam/ecommerce/customers/proto/v1",
    proto = ":customers_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":customers_go_proto"],
    importpath = "github.com/mohsin-ul-islam/ecommerce/customers/proto/v1",
    visibility = ["//visibility:public"],
)
