load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "serve_lib",
    srcs = ["main.go"],
    importpath = "github.com/mohsin-ul-islam/ecommerce/transactions/cmd/serve",
    visibility = ["//visibility:private"],
    deps = [
        "//transactions/api/v1:api",
        "//transactions/proto/v1:proto",
        "@com_github_jackc_pgx_v5//:pgx",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "serve",
    embed = [":serve_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@go_base//image",
    embed = [":serve_lib"],
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)
